# subgraph-template-rust-async-graphql

./: CODEOWNERS  Cargo.toml  LICENSE  README.md
.github/: renovate.json
.github/workflows/: apollo.yaml  checks.yaml  deploy.yaml
src/: lib.rs  main.rs  router_auth.rs  thing.rs
tests/: router_secret.rs
tests/helpers/: mod.rs
