[package]
name = "my-subgraph"  # TODO: Rename This
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "6.0.7", default-features = false, features = ["tracing"] }
async-graphql-axum = { version = "6.0.7", default-features = false }
async-trait = "0.1.74"
axum = { version = "0.6.20", default-features = false, features = ["headers"] }
headers = "0.3.9"
http = "0.2.9"
hyper = "0.14"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.4.4", features = ["compression-br", "compression-gzip", "cors"] }
tracing = "0.1.38"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0.107"
