[package]
name = "my-subgraph"  # TODO: Rename This
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-graphql = { version = "7.0.3", default-features = false, features = ["tracing"] }
async-graphql-axum = { version = "7.0.3", default-features = false }
async-trait = "0.1.79"
axum = { version = "0.7.5", default-features = false }
headers = "0.4.0"
http = "1.1.0"
hyper = "1.2.0"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["compression-br", "compression-gzip", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
urlencoding = "2.1.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
serde_json = "1.0.114"
